# experimenter

./: .env.sample  docker-compose-full.yml  docker-compose.yml
.github/: dependabot.yml
app/: .eslintrc  Dockerfile  package-lock.json  pyproject.toml
app/experimenter/: settings.py
app/experimenter/base/management/commands/: generate-docs.py
app/experimenter/docs/: openapi-schema.json  swagger-ui-template.html  swagger-ui.html
app/experimenter/experiments/: api_urls.py  api_views.py  bugzilla.py  changelog_utils.py  constants.py  forms.py  models.py  serializers.py  tasks.py
app/experimenter/experiments/api/v3/: serializers.py
app/experimenter/experiments/migrations/: 0045_experiment_risk_data_category.py  0075_auto_20191121_0714.py  0076_auto_20191126_2224.py
app/experimenter/experiments/tests/: factories.py  mixins.py  test_api_views.py  test_bugzilla.py  test_changelog_utils.py  test_forms.py  test_migrations.py  test_models.py  test_serializers.py  test_tasks.py
app/experimenter/experiments/tests/api/v3/: test_serializers.py
app/experimenter/normandy/: client.py
app/experimenter/static/core/: package.json
app/experimenter/static/js/: index.js
app/experimenter/static/js/components/: DesignForm.js  MultiPrefBranchFields.js  Pref.js  PrefBranchFields.js  PrefForm.js  PrefManager.js
app/experimenter/static/js/tests/: AddonForm.test.js
app/experimenter/static/rapid/: package.json
app/experimenter/static/rapid/components/experiments/: ExperimentDetails.tsx
app/experimenter/static/rapid/types/: experiment.ts
app/experimenter/templates/experiments/: edit_design.html  edit_variants.html
app/tests/: requirements.txt
app/tests/integration/: pyproject.toml
scripts/: normandy_super_user.py
